First draft for buses and robot path finding